# rag-optimization-lab

./: .gitignore  AGENTS.md
backend/: .env.example  AGENTS.md  README.md  pyproject.toml
backend/app/api/routes/: health.py
backend/app/core/: config.py
backend/app/providers/embedding/: interface.py
backend/app/providers/extraction/: docx_extractor.py  errors.py  html_extractor.py  ids.py  interface.py  pdf_extractor.py
backend/app/providers/fetching/: errors.py  httpx_url_fetcher.py  interface.py  url_security.py
backend/app/providers/llm/: interface.py
backend/app/providers/vector_store/: interface.py
backend/app/rag/cleaning/: __init__.py  errors.py  ids.py  (+5 more)
backend/app/schemas/: cleaning.py  common.py  document.py  extraction.py  generation.py  retrieval.py  source.py
backend/app/services/: extraction.py
backend/scripts/: smoke_test_cleaning_normalization.py  smoke_test_docx_extractor.py  smoke_test_pdf_extractor.py  smoke_test_url_html_pipeline.py
backend/tests/: AGENTS.md  test_cleaning_errors.py  test_cleaning_ids.py  test_cleaning_interface.py  test_cleaning_normalization.py  test_cleaning_schema.py  test_cleaning_source_filters.py  test_document_schema.py  test_docx_extractor.py  test_extraction_errors.py  test_extraction_ids.py  test_extraction_interface.py  test_extraction_schema.py  test_extraction_service.py  test_generation_schemas.py  test_health.py  test_html_extractor.py  test_pdf_extractor.py  test_request_schema.py  test_retrieval_schema.py  test_rule_based_cleaner_construction.py  test_source_schema.py  test_url_fetcher.py
(+22 files in other folders)
